<resources>
    <string name="app_name">train-up</string>
    <string name="app_title">TrainUp</string>
    <string name="welcome_login">¡Bienvenido a Train-Up!</string>
    <string name="name_create">Nombre</string>
    <string name="name_create_hint">Escribe tu nombre</string>
    <string name="surname_create">Apellidos</string>
    <string name="surname_create_hint">Escribe tus apellidos</string>
    <string name="email">Correo electrónico</string>
    <string name="email_hint">Escribe tu correo electrónico</string>
    <string name="phone_create">Teléfono</string>
    <string name="phone_create_hint">Indica tu teléfono</string>
    <string name="password">Contraseña</string>
    <string name="get_password_login">Recuperar contraseña</string>
    <string name="divider_login">O..</string>
    <string name="ops_error"><b>Oops..</b></string>
    <string name="user_not_found">Usuario no encontrado</string>
    <string name="mail_already_registered">¡Correo electrónico ya registrado!</string>
    <string name="happy">:)</string>
    <string name="sad">:(</string>
    <string name="what_to_do">¿Qué quieres hacer?</string>
    <string name="login">Iniciar sesión</string>
    <string name="google_login">Iniciar sesión con Google</string>
    <string name="apple_login">Iniciar sesión con Apple</string>
    <string name="no_account_login">¿No tienes una cuenta?</string>
    <string name="register_login"><u>Regístrate</u></string>
    <string name="welcome_create">¡Crea tu cuenta y entrena con TrainUp!</string>
    <string name="privacy_info">Al registrarte aceptas nuestra <b>política de privacidad</b></string>
    <string name="create_account"><b>Crear cuenta</b></string>
    <string name="existing_account">Ya tengo una cuenta</string>
    <string name="welcome_logged">Bienvenido(a), [nombre]</string>
    <string name="redirect_message">Te estamos redireccionando…</string>
    <string name="return_message">Volver</string>
    <string name="get_password_instruction">Restablecer tu contraseña es fácil. Sólo tienes que añadir el email vinculado a tu cuenta y pulsar el butón de abajo.</string>
    <string name="home">Inicio</string>
    <string name="share">Compartidos</string>
    <string name="pay">Suscripción</string>
    <string name="profile">Perfil</string>
    <string name="train">Entrenamientos</string>
    <string name="save">Guardar</string>
    <string name="free_title"><b>Gratis</b></string>
    <string name="member_title"><b>Miembro</b></string>
    <string name="free_description_line1">· Crea y personaliza tus planes.</string>
    <string name="free_description_line2">· Recibe la información sobre cada ejercicio.</string>
    <string name="free_description_line3">· Obtén aceso a plantillas guía.</string>
    <string name="free_description_line4">· Realiza tu seguimiento.</string>
    <string name="member_description_line1">· Comparte tus entrenamientos con otros usuarios.</string>
    <string name="member_description_line2">· Obtén una experiencia sin anuncios.</string>
    <string name="transaction_data">Datos de la operación</string>
    <string name="amount_text">Importe</string>
    <string name="amount">2.99 €</string>
    <string name="payment_date">Fecha</string>
    <string name="renovation_date">Renovación</string>
    <string name="card_data">Datos de la tarjeta</string>
    <string name="card_number">Número de la tarjeta</string>
    <string name="expiration_date">Caducidad</string>
    <string name="cvv_number">CVV</string>
    <string name="holder">Titular</string>
    <string name="pay_button">Pagar</string>
    <string name="congrats">Enhorabuena</string>
    <string name="subscribe_success_message">Has comenzado tu plan Premium en TrainUp</string>
    <string name="failed">Error en la transacción</string>
    <string name="subscribe_fail_message">No se ha podido completar la operación.</string>
    <string name="duration">Duración:</string>
    <string name="welcome_indicator">¿Qué entrenamos hoy?</string>
    <string name="training_time"> minutos de entrenamiento</string>
    <string name="trainings">Tus entrenamientos</string>
    <string name="shared_trainings">Entrenamientos compartidos</string>
    <string name="password_hint">Escribe tu contraseña</string>
    <string name="reset_password_message">Se ha enviado un correo con un código para restablecer la contraseña. Por favor, verifica tu bandeja de entrada.</string>
    <string name="code">Código</string>
    <string name="code_hint">Escribe tu código</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="new_password_hint">Escribe tu nueva contraseña</string>
    <string name="ok">Ok</string>
    <string name="logout">Salir</string>
    <string name="already_subscribed_message">Ya tienes la suscripción premium a TrainUp</string>
    <string name="cancel_subscription">Cancelar suscripción</string>
    <string name="profile_picture_description">Foto de perfil del usuario</string>
    <string name="credit_card_number_hint">1234 5678 9012 3456</string>
    <string name="credit_card_expiration_date_hint">MM/YYYY</string>
    <string name="credit_card_Security_code_hint">000</string>
    <string name="credit_card_holder_hint">Escribe el nombre del titular de la tarjeta</string>
    <string name="description">Descripción</string>
    <string name="description_hint">Descripción corta del entrenamiento donde se\n mencionen características del mismo. El \nentrenamiento está compuesto por ejercicios,\n listados debajo.</string>
    <string name="training_hint">Entrenamiento 1</string>
    <string name="create_training_title">Añadir Entrenamiento</string>
    <string name="edit_training_title">Editar Entrenamiento</string>
    <string name="create_exercise_title">Añadir Ejercicio</string>
    <string name="exercise_description_hint">Descripción corta del ejercicio donde se mencionen características del mismo.</string>
    <string name="exercise_name_hint">Ejercicio 1</string>
    <string name="duration_hint">X minutos</string>
    <string name="edit_exercise">Editar ejercicio</string>
    <string name="exercise">Ejercicio</string>
    <string name="from_0">Desde 0</string>
    <string name="create_exercise_description">Crea un ejercicio nuevo y personalizado a tus necesidades.</string>
    <string name="use_pattern">Plantilla</string>
    <string name="pattern_description">Añade un ejercicio desde una lista de ejercicios predefinidos.</string>
    <string name="default_exercises">Ejercicios Predefinidos</string>
    <string name="nothing_here">Aún no hay nada por aquí</string>
</resources>