<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/general_background">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="#fffffe"
        android:textSize="48sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_form_background"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/welcome_login"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/email"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/text" />

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/login_text_field_background"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress"
                    android:textColor="#adadad"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/password"

                    android:textColor="@color/text" />

                <EditText
                    android:autofillHints="password"
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/login_text_field_background"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="#adadad"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    android:hint="@string/password_hint"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/get_password_login"
                    android:textAlignment="textEnd"
                    android:textColor="#fcd933"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:onClick="redirectToForgotPassword"/>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_rounded_no_border"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/divider_login"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/init_session_google"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="5sp"
                    android:background="@drawable/btn_rounded_border"
                    android:drawableStart="@drawable/ic_google"
                    android:drawablePadding="50sp"
                    android:fontFamily="@font/montserrat_medium"
                    android:paddingStart="15sp"
                    android:text="@string/google_login"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="#fcd933"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:onClick="functionalityNotImplemented"/>

                <Button
                    android:id="@+id/init_session_apple"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_rounded_border"
                    android:drawableStart="@drawable/ic_apple"
                    android:drawablePadding="50sp"
                    android:fontFamily="@font/montserrat_medium"
                    android:paddingStart="15sp"
                    android:text="@string/apple_login"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="#fcd933"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:onClick="functionalityNotImplemented"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="@string/no_account_login"
                    android:textAlignment="center"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="@color/text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/register_login"
                    android:textAlignment="center"
                    android:textColor="#fcd933"
                    android:textStyle="bold"
                    android:onClick="redirectToCreateAccount"/>

            </LinearLayout>
    </FrameLayout>
    </RelativeLayout>
</LinearLayout>