<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50sp"
    android:paddingRight="50sp"
    android:background="@drawable/general_background">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="60sp"
        android:paddingRight="60sp"
        android:fontFamily="@font/montserrat_medium"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/app_title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="45sp"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:background="@drawable/login_form_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/get_password_login"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/reset_password_message"
            android:textAlignment="textStart"
            android:layout_marginTop="25sp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/code"
            android:textColor="#413e3f" />

        <EditText
            android:id="@+id/edit_text_code"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/create_text_field_background"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/code_hint"
            android:inputType="text"
            android:textColor="@color/editable_text"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/new_password"
            android:textColor="#413e3f" />

        <EditText
            android:autofillHints="password"
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/create_text_field_background"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/editable_text"
            android:textSize="14sp" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/btn_rounded_no_border"
            android:drawablePadding="50sp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/get_password_login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#413e3f"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/return_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/btn_rounded_border"
            android:drawablePadding="50sp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/return_message"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#fcd933"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:onClick="returnButton"
            />
    </LinearLayout>

</LinearLayout>