<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_success_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_color"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="110sp"
        android:layout_marginRight="110sp"
        android:contentDescription="@string/app_title" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/welcome_logged"
        android:fontFamily="@font/montserrat_medium"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/happy"
        android:textAlignment="center"
        android:textColor="@color/main_color"
        android:textSize="200sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/redirect_message"
        android:textAlignment="center"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:textColor="@color/text"
        android:textSize="24sp" />
</LinearLayout>